--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -1,4 +1,5 @@
 {% load static%}
+{% load widget_tweaks %}
 <div class="fixed-back add-technique">
     <div class="card text-right">
         <div class="close"></div>
@@ -8,7 +9,10 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
-                        <input id="technique-name" name="technique-name" value="" class="w-100">
+                        <input id="technique-name" name="technique" value="" class="w-100">
+                        <div class="error">
+                            {{technique_error}}
+                        </div>
                         <label for="technique-name">نام تکنیک</label>
                         <button class="select-technique" type="button">
                             <i class="fas fa-plus"></i>
@@ -24,19 +28,19 @@
                             <span class="title">نحوه ثبت تکنیک</span>
                             <div class="radio-group row">
                                 <div class="form-group col-lg-4 col-md-4">
-                                    <input class="close-upload" type="radio" name="confirmation_method" id="exam" value="exam" hidden>
+                                    <input class="close-upload" type="radio" name="confirmation_method" id="exam" value="exam" required hidden>
                                     <label for="exam">
                                         <div class="title">درخواست آزمون آنلاین</div>
                                     </label>
                                 </div>
                                 <div class="form-group col-lg-4 col-md-4">
-                                    <input class="upload-file" type="radio" name="confirmation_method" id="upload-s" value="certificant" hidden>
+                                    <input class="upload-file" type="radio" name="confirmation_method" id="upload-s" value="certificant" required hidden>
                                     <label for="upload-s">
                                         <div class="title">آپلود گواهی نامه</div>
                                     </label>
                                 </div>
                                 <div class="form-group col-lg-4 col-md-4">
-                                    <input class="upload-file" type="radio" name="confirmation_method" id="article" value="paper" hidden>
+                                    <input class="upload-file" type="radio" name="confirmation_method" id="article" value="paper" required hidden>
                                     <label for="article">
                                         <div class="title">آپلود مقاله</div>
                                     </label>
