is_correct and is_waiting created

--- a/researcher/templates/researcher/layouts/confirmation.html
+++ b/researcher/templates/researcher/layouts/confirmation.html
@@ -1,6 +1,6 @@
 {% load static%}
 <div class="fixed-back confirmation">
-    <div class="card text-right">
+    <div class="card text-right small-card">
         <div class="close"></div>
         <div class="container">
             <div class="row">
