--- a/researcher/templates/researcher/layouts/projectList.html
+++ b/researcher/templates/researcher/layouts/projectList.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <div class="inner-card card">
+        <div class="info-card card">
     <div class="row">
         <div class="col-lg-12">
             <ul class="nav nav-tabs w-100" id="project-list">
