iziToast and userInfo bugs are solve

--- a/researcher/templates/researcher/layouts/research_form.html
+++ b/researcher/templates/researcher/layouts/research_form.html
@@ -1,6 +1,6 @@
 {% load static%}
 <div class="fixed-back research_form">
-    <div class="card small-card text-right">
+    <div class="card small-card text-right small-card">
         <div class="close"></div>
         <div class="card-head">ثبت سابقه پژوهشی</div>
         <div class="container">
