--- a/researcher/templates/researcher/layouts/scientific_form.html
+++ b/researcher/templates/researcher/layouts/scientific_form.html
@@ -1,7 +1,7 @@
 {% load static%}
 {% load widget_tweaks %}
 <div class="fixed-back scientific_form">
-    <div class="card small-card text-right">
+    <div class="card small-card text-right small-card">
         <div class="close"></div>
         <div class="card-head">ثبت سابقه علمی</div>
         <div class="container">
