--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -11,33 +11,35 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
-      {% block header %}{% endblock %}
-      <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-      <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
-      <!-- <link rel="stylesheet" href="{% static 'researcher/css/style_xs.css' %}"> -->
-  </head>
-  <body>
-  {% block dialog %}{% endblock %}
-  <div class="main  {% if request.user.researcheruser.status.status == 'signed_up' %} blur-div {% endif %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css">
+    {% block header %}{% endblock %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'researcher/css/style_xs.css' %}"> -->
+</head>
+<body>
+{% block dialog %}{% endblock %}
+<div class="main  {% if request.user.researcheruser.status.status == 'signed_up' %} blur-div {% endif %}">
     <div class="top-bar">
-      <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
-      <div class="dropdown">
-        <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
-          {% if request.user.researcheruser.researcherprofile.photo %}
-               <img src="{{ request.user.researcheruser.researcherprofile.photo.url }}" alt="profile"
+        <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
+        <div class="dropdown">
+            <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
+                {% if request.user.researcheruser.researcherprofile.photo %}
+                    <img src="{{ request.user.researcheruser.researcherprofile.photo.url }}" alt="profile"
                          class="dropdown-img profile"
                          height="45px">
-        {% else %}
-             <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="dropdown-img profile" height="45px">
-        {% endif %}
-        </button>
-        <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
-          <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
-          <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
-          <li class="divider"></li>
-          <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
-        </ul>
-      </div>
+                {% else %}
+                    <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="dropdown-img profile"
+                         height="45px">
+                {% endif %}
+            </button>
+            <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
+                <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
+                <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
+                <li class="divider"></li>
+                <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
+            </ul>
+        </div>
     </div>
     <div class="content">
         <div class="container">
@@ -86,7 +88,7 @@
             </li>
             {% url 'researcher:technique' as technique_url %}
             <li class="list-group-item text-right">
-                <a href="{{technique_url}}">
+                <a href="{{ technique_url }}">
                     <div>
                         <span>تکنیک ها</span>
                         <span class="fas fa-file-medical"></span>
@@ -94,10 +96,10 @@
                 </a>
             </li>
             <!-- {% url 'researcher:question-alert' as question_url %} -->
-            {% if question_instance %}                
+            {% if question_instance %}
                 {% url 'researcher:question-show' question_id=uuid as question_url %}
             {% else %}
-                <h1>{{question_instance}}</h1>
+                <h1>{{ question_instance }}</h1>
                 {% url 'researcher:question-alert' as question_url %}
             {% endif %}
             <li class="list-group-item text-right">
@@ -123,6 +125,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
 {% block script %}{% endblock %}
 <script type="text/javascript" src="{% static 'researcher/js/script-functions.js' %}"></script>
 <script type="text/javascript" src="{% static 'researcher/js/script.js' %}"></script>
