--- a/researcher/templates/researcher/layouts/executive_form.html
+++ b/researcher/templates/researcher/layouts/executive_form.html
@@ -1,6 +1,6 @@
 {% load static%}
 <div class="fixed-back executive_form">
-    <div class="card text-right">
+    <div class="card text-right small-card">
         <div class="close"></div>
         <div class="card-head">ثبت سابقه اجرایی</div>
         <div class="container">
