--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -28,21 +28,23 @@
                                 انجام شده</a></li>
                         </ul>
                         <div class="tab-content">
-                            {% for project in expert_user.experts_applied.all %}
+                            {% for p in projects %}
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="card project-item">
                                             {% if forloop.counter0 == 0 %}
                                                 <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>
                                             {% endif %}
-                                            <span class="header">{{ project.project_form.project_title_persian }} <span
-                                                    class="sub-header"> ( {% calculate_date_past project.date_submitted_by_industry %} قبل ) </span></span>
+                                            <span class="header">{{ p.project_form.project_title_persian }} <span
+                                                    class="sub-header"> ( {% calculate_date_past p.date_submitted_by_industry %} قبل ) </span></span>
                                             <span><i class="far fa-envelope"></i> پیام ها </span>
                                             <span><i
-                                                    class="fas fa-dollar-sign"></i><span>{{ project.cost_of_project }}</span> ریال </span>
+                                                    class="fas fa-dollar-sign"></i><span>{{ p.cost_of_project }}</span> ریال </span>
                                             <span><i
-                                                    class="fas fa-hourglass-end"></i><span>{% calculate_date_remaining project.date_finished %}</span> تا اتمام پروژه</span>
-                                            <button type="button" class="chamran-btn-info" id="{{ project.id }}" data-url="{% url 'expert:show_project' %}">مشاهده</button>
+                                                    class="fas fa-hourglass-end"></i><span>{% calculate_date_remaining p.date_finished %}</span> تا اتمام پروژه</span>
+                                            <button type="button" class="chamran-btn-info" id="{{ p.id }}"
+                                                    data-url="{% url 'expert:show_project' %}">مشاهده
+                                            </button>
                                             <button type="button" class="chamran-btn-delete">رد</button>
                                         </div>
                                     </div>
