--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -5,19 +5,12 @@
         <div class="card-head"> محلول کشت سلولی ( FBS )</div>
         <div class="container">
             <div class="row mbottom-lg-30">
-                <div class="col-lg-6">
-                    <span class="border-span">محیط کشت سلولی </span>
-                    <span class="border-span">PCR</span>
-                    <span class="border-span">فلوسایتومتری</span>
-                    <span class="border-span">فلوسایتومتری</span>
-                    <span class="border-span">PCR</span>
-                    <span class="border-span">PCR</span>
-                </div>
+                <div class="col-lg-6 techniques"></div>
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="establish-time col-6">
                             <div class="time-head">زمان ثبت</div>
-                            <div class="time-b  ody">22/12/1398</div>
+                            <div class="time-body">22/12/1398</div>
                         </div>
                         <div class="time-left col-6">
                             <div class="time-head">مهلت انجام</div>
@@ -36,16 +29,16 @@
                                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                                      aria-orientation="vertical">
                                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
-                                       href="#v-pills-home" role="tab" aria-controls="v-pills-home"
+                                       role="tab" aria-controls="v-pills-home"
                                        aria-selected="true"></a>
                                     <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-                                       href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+                                       role="tab" aria-controls="v-pills-profile"
                                        aria-selected="false"></a>
                                     <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
-                                       href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+                                       role="tab" aria-controls="v-pills-messages"
                                        aria-selected="false"></a>
                                     <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-                                       href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+                                       role="tab" aria-controls="v-pills-settings"
                                        aria-selected="false"></a>
                                 </div>
                             </div>
