--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -11,6 +11,7 @@
     {% include 'expert/layouts/showProject.html' %}
     {% include 'expert/layouts/vote_dialog_industry.html' %}
     {% include 'expert/layouts/vote_dialog_researcher.html' %}
+    {% include 'expert/layouts/select_techniques.html' %}
 {% endblock %}
 
 {% block content %}
