show all project data and add inputTag to technique in create project page

--- a/industry/templates/industry/layouts/showProject.html
+++ b/industry/templates/industry/layouts/showProject.html
@@ -1,4 +1,4 @@
-{% load static%}
+{% load static %}
 <div class="dialog-main showProject">
     <div class="card text-right dialog">
         <div class="close"></div>
@@ -10,19 +10,12 @@
         </div>
         <div class="container">
             <div class="row">
-               <div class="col-lg-12">
-                   <h6 class="project-title"> محلول کشت سلولی ( FBS )</h6>
-               </div>
+                <div class="col-lg-12">
+                    <h6 class="project-title"> محلول کشت سلولی ( FBS )</h6>
+                </div>
             </div>
             <div class="row mbottom-lg-30">
-                <div class="col-lg-6">
-                    <span class="border-span">محیط کشت سلولی </span>
-                    <span class="border-span">PCR</span>
-                    <span class="border-span">فلوسایتومتری</span>
-                    <span class="border-span">فلوسایتومتری</span>
-                    <span class="border-span">PCR</span>
-                    <span class="border-span">PCR</span>
-                </div>
+                <div class="col-lg-6 techniques"></div>
                 <div class="col-lg-6">
                     <div class="establish-time">
                         <div class="time-head">زمان ثبت</div>
@@ -41,11 +34,16 @@
                         <span class="title-back"></span>
                         <div class="project-info-innerDiv">
                             <div class="project-info-tabs">
-                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" role="tab" aria-controls="v-pills-home" aria-selected="true"></a>
-                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" role="tab" aria-controls="v-pills-profile" aria-selected="false"></a>
-                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" role="tab" aria-controls="v-pills-messages" aria-selected="false"></a>
-                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" role="tab" aria-controls="v-pills-settings" aria-selected="false"></a>
+                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                                     aria-orientation="vertical">
+                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" role="tab"
+                                       aria-controls="v-pills-home" aria-selected="true"></a>
+                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" role="tab"
+                                       aria-controls="v-pills-profile" aria-selected="false"></a>
+                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" role="tab"
+                                       aria-controls="v-pills-messages" aria-selected="false"></a>
+                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" role="tab"
+                                       aria-controls="v-pills-settings" aria-selected="false"></a>
                                 </div>
                             </div>
                             <div class="project-info-content">
@@ -57,7 +55,8 @@
                                         لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.
                                     </div>
                                     <div class="answer">
-                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.
+                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون
+                                        جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.
                                     </div>
                                 </div>
                                 <div>
@@ -65,10 +64,13 @@
                                         <span class="question-mark">
                                             <i class="far fa-question-circle"></i>
                                         </span>
-                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟
+                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات
+                                        درمانی یا ... حاصل می شود؟
                                     </div>
                                     <div class="answer">
-                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد میتواند جایگزین نمونه خارجی شود.
+                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر
+                                        تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد
+                                        میتواند جایگزین نمونه خارجی شود.
                                     </div>
                                 </div>
                                 <div>
