--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}{% endblock %}</title>
-        <link rel="icon" href="{% static 'industry/img/logo.ico' %}">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'industry/css/style.css' %}">
-    </head>
-  <body>
-  {% block dialog%}{% endblock %}
-  <div class="main
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" href="{% static 'industry/img/logo.ico' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'industry/css/style.css' %}">
+</head>
+<body>
+{% block dialog %}{% endblock %}
+<div class="main
         {% if user.industryuser.status == 'signed_up' %} blur-div {% endif %}">
     <div class="top-bar">
-      <img src="{% static 'industry/img/logoName.png' %}" alt="chamranTeam">
-      <div class="dropdown">
-        <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
-          <img
-              {% if user.industryuser.industryform.photo %}
-                 src="/media/{{ user.industryuser.industryform.name }}/{{ user.industryuser.industryform.photo.name }}"
-              {% else %}
-                 src="{% static 'industry/img/profile.jpg' %}"
-              {% endif %}
-              alt="profile" class="dropdown-img profile" height="45px">
-        </button>
-        <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
-          <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
-          <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
-          <li class="divider"></li>
-          <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
-        </ul>
-      </div>
+        <img src="{% static 'industry/img/logoName.png' %}" alt="chamranTeam">
+        <div class="dropdown">
+            <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
+                <img
+                        {% if user.industryuser.industryform.photo %}
+                            src="/media/{{ user.industryuser.industryform.name }}/{{ user.industryuser.industryform.photo.name }}"
+                        {% else %}
+                            src="{% static 'industry/img/profile.jpg' %}"
+                        {% endif %}
+                            alt="profile" class="dropdown-img profile" height="45px">
+            </button>
+            <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
+                <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
+                <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
+                <li class="divider"></li>
+                <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
+            </ul>
+        </div>
     </div>
     <div class="content">
         <div class="container">
@@ -42,79 +45,81 @@
         </div>
     </div>
     <div class="side-bar">
-      <div class="topMargin"></div>
-      <div class="expert-icon"></div>
-      <img
-              {% if user.industryuser.industryform.photo %}
-                 src="/media/{{ user.industryuser.industryform.name }}/{{ user.industryuser.industryform.photo.name }}"
-              {% else %}
-                 src="{% static 'industry/img/profile.jpg' %}"
-              {% endif %}
-              alt="profile" class="profile" width="150px" height="150px">
-      <h5>{% block name %}{% endblock %}</h5>
-      <h6>صنعت</h6>
-      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
-          <span class="sr-only">{{ score|default:0 }}% completed</span>
+        <div class="topMargin"></div>
+        <div class="expert-icon"></div>
+        <img
+                {% if user.industryuser.industryform.photo %}
+                    src="/media/{{ user.industryuser.industryform.name }}/{{ user.industryuser.industryform.photo.name }}"
+                {% else %}
+                    src="{% static 'industry/img/profile.jpg' %}"
+                {% endif %}
+                    alt="profile" class="profile" width="150px" height="150px">
+        <h5>{% block name %}{% endblock %}</h5>
+        <h6>صنعت</h6>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
+                 aria-valuemax="100" style="width: 70px">
+                <span class="sr-only">{{ score|default:0 }}% completed</span>
+            </div>
         </div>
-      </div>
-      <div class="hr"></div>
-      <ul class="list-group">
-        {% url "industry:index" as index %}
-        <a href='{{ index }}'>
-            <li class="list-group-item text-right {% if request.get_full_path == index %}active{% endif %}">
-                <div>
-                  <span>پروژه ها</span>
-                  <span class="fas fa-list-ul"></span>
-                </div>
+        <div class="hr"></div>
+        <ul class="list-group">
+            {% url "industry:index" as index %}
+            <a href='{{ index }}'>
+                <li class="list-group-item text-right {% if request.get_full_path == index %}active{% endif %}">
+                    <div>
+                        <span>پروژه ها</span>
+                        <span class="fas fa-list-ul"></span>
+                    </div>
+                </li>
+            </a>
+            {% url "industry:messages" as messages %}
+            <a href="{{ messages }}">
+                <li class="list-group-item text-right {% if request.get_full_path == messages %}active{% endif %}">
+                    <div>
+                        <span>پیام ها</span>
+                        <span class="fas fa-envelope"></span>
+                    </div>
+                </li>
+            </a>
+            {% url "industry:newProject" as newProject %}
+            <a href='{{ newProject }}'>
+                <li class="list-group-item text-right {% if request.get_full_path == newProject %}active{% endif %}">
+                    <div>
+                        <span>ثبت پروژه جدید</span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                </li>
+            </a>
+            {#            TODO#}
+            <li class="list-group-item text-right">
+                <a href="#">
+                    <div>
+                        <span>درخواست ها</span>
+                        <span class="fas fa-sticky-note"></span>
+                    </div>
+                </a>
             </li>
-        </a>
-        {% url "industry:messages" as messages %}
-        <a href="{{ messages }}">
-            <li class="list-group-item text-right {% if request.get_full_path == messages %}active{% endif %}">
-                <div>
-                  <span>پیام ها</span>
-                  <span class="fas fa-envelope"></span>
-                </div>
+            {% url 'industry:userInfo' as userInfo %}
+            <li class="list-group-item text-right {% if request.get_full_path == userInfo %}active{% endif %}">
+                <a href="{{ userInfo }}">
+                    <div>
+                        <span>تنظیمات کاربری</span>
+                        <span class="fas fa-cog"></span>
+                    </div>
+                </a>
             </li>
-        </a>
-        {% url "industry:newProject" as newProject %}
-      <a href='{{ newProject }}'>
-        <li class="list-group-item text-right {% if request.get_full_path == newProject %}active{% endif %}">
-            <div>
-                <span>ثبت پروژه جدید</span>
-                <span class="fas fa-plus-circle"></span>
-            </div>
-        </li>
-      </a>
-{#            TODO#}
-        <li class="list-group-item text-right">
-          <a href="#">
-            <div>
-                <span>درخواست ها</span>
-                <span class="fas fa-sticky-note"></span>
-            </div>
-          </a>
-        </li>
-        {% url 'industry:userInfo' as userInfo%}
-        <li class="list-group-item text-right {% if request.get_full_path == userInfo %}active{% endif %}">
-          <a href="{{ userInfo }}">
-            <div>
-              <span>تنظیمات کاربری</span>
-              <span class="fas fa-cog"></span>
-            </div>
-          </a>
-        </li>
-      </ul>
+        </ul>
     </div>
-  </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-  {% block script %}{% endblock %}
-  <script type="text/javascript" src="{% static 'industry/js/script-functions.js' %}"></script>
-  <script type="text/javascript" src="{% static 'industry/js/script.js' %}"></script>
-  </body>
+</div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.js"></script>
+{% block script %}{% endblock %}
+<script type="text/javascript" src="{% static 'industry/js/script-functions.js' %}"></script>
+<script type="text/javascript" src="{% static 'industry/js/script.js' %}"></script>
+</body>
 </html>
