showing question details

--- a/expert/templates/expert/layouts/show_question.html
+++ b/expert/templates/expert/layouts/show_question.html
@@ -8,11 +8,11 @@
                 <div class="col-lg-12">
                     <div class="question-info">
                         <div class="status active">
-                            <span>فعال</span>
+                            <span class="question-status">فعال</span>
                         </div>
                         <div class="date">
                             <span>تاریخ:</span>
-                            <span>1398/5/12</span>
+                            <span class="question-date">1398/5/12</span>
                         </div>
                     </div>
                 </div>
@@ -29,28 +29,28 @@
                         <ul class="inline-list">
                             <li class="list-item">
                                 <a href="#" class="attach-file">
-                                    <span class="doc-file"></span>
-                                    <span>fileName</span>
+                                    <span class="attachment"></span>
+                                    <span class="attach-name">ضمیمه ای وجود ندارد</span>
                                 </a>
                             </li>
-                            <li class="list-item">
-                                <a href="#" class="attach-file">
-                                    <span class="png-file"></span>
-                                    <span>fileName</span>
-                                </a>
-                            </li>
-                            <li class="list-item">
-                                <a href="#" class="attach-file">
-                                    <span class="pdf-file"></span>
-                                    <span>fileName</span>
-                                </a>
-                            </li>
-                            <li class="list-item">
-                                <a href="#" class="attach-file" data-toggle="popover" title="j" data-content="12" data-placement="top">
-                                    <span class="jpg-file"></span>
-                                    <span>fileName</span>
-                                </a>
-                            </li>
+{#                            <li class="list-item">#}
+{#                                <a href="#" class="attach-file">#}
+{#                                    <span class="png-file"></span>#}
+{#                                    <span>fileName</span>#}
+{#                                </a>#}
+{#                            </li>#}
+{#                            <li class="list-item">#}
+{#                                <a href="#" class="attach-file">#}
+{#                                    <span class="pdf-file"></span>#}
+{#                                    <span>fileName</span>#}
+{#                                </a>#}
+{#                            </li>#}
+{#                            <li class="list-item">#}
+{#                                <a href="#" class="attach-file" data-toggle="popover" title="j" data-content="12" data-placement="top">#}
+{#                                    <span class="jpg-file"></span>#}
+{#                                    <span>fileName</span>#}
+{#                                </a>#}
+{#                            </li>#}
                         </ul>
                     </div>
                 </div>
